Repaso último día

--- a/CSS/Netflix/index.html
+++ b/CSS/Netflix/index.html
@@ -340,6 +340,501 @@
           </li>
         </menu>
       </section>
+      <section>
+        <h2>Popular on Netflix</h2>
+        <menu>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+        </menu>
+      </section>
+      <section>
+        <h2>Continue Watching</h2>
+        <menu>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+        </menu>
+      </section>
+      <section>
+        <h2>Trending now</h2>
+        <menu>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+        </menu>
+      </section>
+      <section>
+        <h2>Popular on Netflix</h2>
+        <menu>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+        </menu>
+      </section>
+      <section>
+        <h2>Continue Watching</h2>
+        <menu>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+        </menu>
+      </section>
+      <section>
+        <h2>Trending now</h2>
+        <menu>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+        </menu>
+      </section>
+      <section>
+        <h2>Popular on Netflix</h2>
+        <menu>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+        </menu>
+      </section>
+      <section>
+        <h2>Continue Watching</h2>
+        <menu>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+        </menu>
+      </section>
+      <section>
+        <h2>Trending now</h2>
+        <menu>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="http://source.unsplash.com/random" alt=""
+            /></a>
+          </li>
+        </menu>
+      </section>
     </main>
   </body>
 </html>
